--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,3 +1,27 @@
+@book{ozisik_heat_1993,
+	location = {New York Chichester Brisbane [etc.]},
+	edition = {2nd ed},
+	title = {Heat conduction},
+	isbn = {978-0-471-53256-9},
+	publisher = {J. Wiley},
+	author = {Özısık, M. Necati},
+	date = {1993},
+	file = {Özısik - 1993 - Heat conduction.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\EYT83H6K\\Özıs̜ık - 1993 - Heat conduction.pdf:application/pdf},
+}
+
+@inbook{ozisik_integraltransform_heat_1993,
+author = {Özisik, M. Necati},
+title = {Integral-transform technique},
+booktitle = {Heat conduction},
+year = {1993},
+language = {eng},
+publisher = {J. Wiley},
+location = {New York Chichester Brisbane [etc.]},
+isbn = {978-0-471-53256-9},
+chapter = {13},
+}
+
+
 @inproceedings{babaei_investigation_2010,
     author = {Babaei, Hadi and Siddiqui, Kamran},
     title = "{Investigation of Streaming Flow Patterns in a Thermoacoustic Device Using PIV}",
