--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -57,7 +57,7 @@ Pour séparer les phénomènes physiques et les transferts thermiques mis en jeu
     \external{fig_HeatOnly_CHXout_H1H2}
 %    \externalremake
     \input{../fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_CHXout_H1H2}
-    \caption{toto}
+    \caption{\'Evolution temporelle des températures dans la cavité d'adaptation d'impédance pour les expériences dans les orientation `\texttt{H1}' et `\texttt{H2}' à \textit{drive ratio} nul.}
     \label{fig:HeatOnly_CHXout_H1H2}
 \end{figure}
 
@@ -109,7 +109,7 @@ La figure \ref{fig:HeatOnly_CHXout_V1V2} blablabla
     \external{fig_HeatOnly_CHXout_V1V2}
 %    \externalremake
     \input{../fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_CHXout_V1V2}
-    \caption{toto}
+    \caption{\'Evolution temporelle des températures dans la cavité d'adaptation d'impédance pour les expériences dans les orientations `\texttt{V1}' et `\texttt{V2}' à \textit{drive ratio} nul.}
     \label{fig:HeatOnly_CHXout_V1V2}
 \end{figure}
 
