Ajout suite discussion Modèle Transitoire
- ajout étapes suite réunion transitoire
  1) Récup coeff empirique h de pertes lat avec heat only
  2) réinjection des h dans les manips à faible amplitude
Pour l'instant dans chap 4 "étude théorique", à peut-être intégrer à un autre chap...
- Numéro chapitre en Roman
- Numéro chapitre devant num section

--- a/tex/EtudeTheoriqueSimus.tex
+++ b/tex/EtudeTheoriqueSimus.tex
@@ -1,4 +1,4 @@
-\chapter{\'Etude théorique et simulations}
+\chapter{\'Etudes théoriques et simulations}
 \vfill
 \hrule \vspace{.5cm}
 {\hypersetup{linkcolor = black}
@@ -8,4 +8,6 @@
 \vfill
 \clearpage
 
-\section{Section}
+\section{Détermination des coefficients empiriques du modèle transitoire}
+
+Le modèle transitoire présenté au chapitre §\ref{chap:ModeleTransoitoire_SansConvNat} comporte des paramètres empiriques à adapter pour approcher les résultats expérimentaux. Parmi eux, il y la source de chaleur liées à la vorticité $Q_{\sf vort}$, et les coefficients d'échanges aux interfaces en $x=0$, $x=L_{reg}$ et $r=r_{reg}$, notés respectivement $h_{x}|_{x=0}$, $h_{x}|_{x=L_{reg}}$ et $h_{r}|_{r=r_{reg}}$. Ces trois derniers sont supposés uniquement dépendants de l'écart de température $\tau$, et pour des raisons de simplicité sont estimés au moyen des mesure `\texttt{heat\_only}', ce qui permet en outre de s'affranchir de la vorticité. Le modèle est alors modifié pour calculer la température du système à $p=0$ et $u=0$.
