--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,9 +1,9 @@
 @book{ozisik_heat_1993,
-	location = {New York Chichester Brisbane [etc.]},
+	location = {New York},
 	edition = {2nd ed},
 	title = {Heat conduction},
 	isbn = {978-0-471-53256-9},
-	publisher = {J. Wiley},
+	publisher = {J. Wiley \& Sons, Inc},
 	author = {Özısık, M. Necati},
 	date = {1993},
 	file = {Özısik - 1993 - Heat conduction.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\EYT83H6K\\Özıs̜ık - 1993 - Heat conduction.pdf:application/pdf},
@@ -15,8 +15,8 @@ title = {Integral-transform technique},
 booktitle = {Heat conduction},
 year = {1993},
 language = {eng},
-publisher = {J. Wiley},
-location = {New York Chichester Brisbane [etc.]},
+publisher = {J. Wiley \& Sons, Inc},
+location = {New York},
 isbn = {978-0-471-53256-9},
 chapter = {13},
 }
@@ -1216,7 +1216,7 @@ Un partenaire industriel (groupe {PSA}) et quatre laboratoires du {CNRS} (Instit
 }
 
 @book{nield_convection_2013,
-	location = {New York, {NY}},
+	location = {New York},
 	title = {Convection in Porous Media},
 	isbn = {978-1-4614-5540-0},
 	url = {https://link.springer.com/10.1007/978-1-4614-5541-7},
