--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -159,14 +159,14 @@ Le réfrigérateur doit pouvoir être orienté dans toutes les orientations util
 
 \subsection{Définition des orientations}
 
-Les orientations choisies au moyen des palans sont décrites par deux angles $\theta_v$ et $\theta_h$. Le premier désigne l'angle entre l'axe horizontal et l'axe de symétrie du réfrigérateur, tandis que le second, la rotation autour de cet axe de symétrie. Les orientations utilisées dans les différentes parties de ce manuscript sont présentées sur la figure~\ref{fig:OrientationCore}. Cette figure, dans laquelle la gravité est toujours dirigée vers le bas de la page, présente également les emplacements des thermocouples utilisés. 
+Les orientations choisies au moyen des palans sont décrites par deux angles $\psi_v$ et $\psi_h$. Le premier désigne l'angle entre l'axe horizontal et l'axe de symétrie du réfrigérateur, tandis que le second, la rotation autour de cet axe de symétrie. Les orientations utilisées dans les différentes parties de ce manuscript sont présentées sur la figure~\ref{fig:OrientationCore}. Cette figure, dans laquelle la gravité est toujours dirigée vers le bas de la page, présente également les emplacements des thermocouples utilisés. 
 
 %\begin{figure}[!ht]
 %    \centering
 %    \external{fig_OrientationCore}
 %%    \externalremake
 %    \input{../fig/fig_OrientationCore/tex/fig_OrientationCore}
-%    \caption{Différentes orientations du c\oe{}ur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles {\bf (a)} $\theta_v=\ang{0}$ et $\theta_h=\ang{0}$ pour l'orientation `\texttt{H1}', {\bf (b)} $\theta_v=\ang{0}$ et $\theta_h=\ang{+90}$ pour l'orientation `\texttt{H2}', {\bf (c)} $\theta_v=\ang{-90}$ pour l'orientation `\texttt{V1}', et {\bf (d)} $\theta_v=\ang{+90}$ pour l'orientation `\texttt{V2}'.\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\theta_i$ dans la caption ou la figure ?}}
+%    \caption{Différentes orientations du c\oe{}ur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles {\bf (a)} $\psi_v=\ang{0}$ et $\psi_h=\ang{0}$ pour l'orientation `\texttt{H1}', {\bf (b)} $\psi_v=\ang{0}$ et $\psi_h=\ang{+90}$ pour l'orientation `\texttt{H2}', {\bf (c)} $\psi_v=\ang{-90}$ pour l'orientation `\texttt{V1}', et {\bf (d)} $\psi_v=\ang{+90}$ pour l'orientation `\texttt{V2}'.\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\psi_i$ dans la caption ou la figure ?}}
 %    \label{fig:OrientationCore}
 %\end{figure}
 
@@ -196,20 +196,20 @@ Les orientations choisies au moyen des palans sont décrites par deux angles $\t
 		\caption{`\texttt{V2}'}
 		\label{fig:OrientationCore_V2}
 	\end{subfigure}   
-    \caption{Différentes orientations du c\oe{}ur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles \subref{fig:OrientationCore_H1} $\theta_v=\ang{0}$ et $\theta_h=\ang{0}$ pour l'orientation `\texttt{H1}', \subref{fig:OrientationCore_H2} $\theta_v=\ang{0}$ et $\theta_h=\ang{+90}$ pour l'orientation `\texttt{H2}', \subref{fig:OrientationCore_V1} $\theta_v=\ang{-90}$ pour l'orientation `\texttt{V1}', et \subref{fig:OrientationCore_V2} $\theta_v=\ang{+90}$ pour l'orientation `\texttt{V2}'.\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\theta_i$ dans la caption ou la figure ?}}
+    \caption{Différentes orientations du c\oe{}ur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles \subref{fig:OrientationCore_H1} $\psi_v=\ang{0}$ et $\psi_h=\ang{0}$ pour l'orientation `\texttt{H1}', \subref{fig:OrientationCore_H2} $\psi_v=\ang{0}$ et $\psi_h=\ang{+90}$ pour l'orientation `\texttt{H2}', \subref{fig:OrientationCore_V1} $\psi_v=\ang{-90}$ pour l'orientation `\texttt{V1}', et \subref{fig:OrientationCore_V2} $\psi_v=\ang{+90}$ pour l'orientation `\texttt{V2}'.\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\psi_i$ dans la caption ou la figure ?}}
     \label{fig:OrientationCore} %
 \end{figure}
 
 \medskip
 
-La première orientation, nommée `\texttt{H1}' et représentée sur la figure~\ref{fig:OrientationCore_H1}, est la même que dans l'article dédié à la conception du réfrigérateur \cite{ramadan_design_2021}. Dans cette configuration, le \textsc{Tacot} est placé à l'horizontale comme sur la figure~\ref{fig:TACOTSuspendu_Frigo}, et les thermocouples sont placés sur un plan vertical coplanaire à la gravité. Cette orientation fait office de référence des orientations, soit $\theta_v=\theta_h=\qty{0}{\degree}$.
+La première orientation, nommée `\texttt{H1}' et représentée sur la figure~\ref{fig:OrientationCore_H1}, est la même que dans l'article dédié à la conception du réfrigérateur \cite{ramadan_design_2021}. Dans cette configuration, le \textsc{Tacot} est placé à l'horizontale comme sur la figure~\ref{fig:TACOTSuspendu_Frigo}, et les thermocouples sont placés sur un plan vertical coplanaire à la gravité. Cette orientation fait office de référence des orientations, soit $\psi_v=\psi_h=\qty{0}{\degree}$.
 
-Ensuite, la deuxième orientation est représentée sur la figure~\ref{fig:OrientationCore_H2}. Dans ce cas, référérencé en tant que `\texttt{H2}', le réfrigérateur est toujours à l'horizontale ($\theta_v=\qty{0}{\degree}$), mais pivoté autour de son axe pour placer les thermocouples sur un plan horizontal auquel la gravité est orthogonale ($\theta_h=\qty{90}{\degree}$).
+Ensuite, la deuxième orientation est représentée sur la figure~\ref{fig:OrientationCore_H2}. Dans ce cas, référérencé en tant que `\texttt{H2}', le réfrigérateur est toujours à l'horizontale ($\psi_v=\qty{0}{\degree}$), mais pivoté autour de son axe pour placer les thermocouples sur un plan horizontal auquel la gravité est orthogonale ($\psi_h=\qty{90}{\degree}$).
 \smallskip
 
-L'orientation `\texttt{V1}' est affichée sur la figure~\ref{fig:OrientationCore_V1}. Cette configuration est radicalement différentes des deux précédentes : l'axe de symétrie du réfrigérateur est vertical, avec l'échangeur froid sous l'échangeur ambiant ($\theta_v=\qty{-90}{\degree}$).
+L'orientation `\texttt{V1}' est affichée sur la figure~\ref{fig:OrientationCore_V1}. Cette configuration est radicalement différentes des deux précédentes : l'axe de symétrie du réfrigérateur est vertical, avec l'échangeur froid sous l'échangeur ambiant ($\psi_v=\qty{-90}{\degree}$).
 
-Enfin, l'orientation `\texttt{V2}' affichée sur la figure~\ref{fig:OrientationCore_V2} est l'orientation inverse de la précédente. L'axe de symétrie du réfrigérateur est encore vertical, mais la source acoustique principale est cette fois au dessus du noyau thermoacoustique et $\theta_v=\qty{+90}{\degree}$.
+Enfin, l'orientation `\texttt{V2}' affichée sur la figure~\ref{fig:OrientationCore_V2} est l'orientation inverse de la précédente. L'axe de symétrie du réfrigérateur est encore vertical, mais la source acoustique principale est cette fois au dessus du noyau thermoacoustique et $\psi_v=\qty{+90}{\degree}$.
 
 \subsection{Acquisitions}
 \subsubsection{Procédures d'acquisition}
@@ -238,7 +238,7 @@ Les cartes d'acquisition, connectées sur une baie d'instrumentation, contraigne
 
 \section{Ensemble des simulations réalisées}
 \subsection{Estimation théorique du flux de chaleur de convection naturelle}
-Au sein du réfrigérateur \textsc{Tacot} et particulièrement dans la cavité devant la source acoustique principale, la distribution de température du côté froid hors du noyau laisse penser à la présence d'une cellule de convection naturelle à l'intérieur. Pour les orientations où le réfrigérateur est à l'horizontale ($\theta_v=\qty{0}{\degree}$), il est très difficile de se rendre compte des flux massique et thermique causés par la différence de température de part et d'autre de cette cavité de forme conique pour laquelle il n'existe pas de littérature à notre connaissance \textcolor{red}{à vérifier}. Avant la moindre tentative d'explication de cette distributions de température, des études hydrodynamiques sont menées pour aider à l'interprétation des mesures de température. 
+Au sein du réfrigérateur \textsc{Tacot} et particulièrement dans la cavité devant la source acoustique principale, la distribution de température du côté froid hors du noyau laisse penser à la présence d'une cellule de convection naturelle à l'intérieur. Pour les orientations où le réfrigérateur est à l'horizontale ($\psi_v=\qty{0}{\degree}$), il est très difficile de se rendre compte des flux massique et thermique causés par la différence de température de part et d'autre de cette cavité de forme conique pour laquelle il n'existe pas de littérature à notre connaissance \textcolor{red}{à vérifier}. Avant la moindre tentative d'explication de cette distributions de température, des études hydrodynamiques sont menées pour aider à l'interprétation des mesures de température. 
 
 Tout d'abord, une étude très simplifiée d'une cavité 2D où les parois droite et gauches sont respectivement à une température chaude $T_c$ et froide $T_f$. Cette étude doit permettre l'obtention d'ordres de grandeurs des quantité d'intérêt, en particulier le flux de chaleur $Q_{conv}$ qui agit comme une charge thermique sur le côté froid du noyau thermoacoustique. Ensuite, une simulation par éléments finis de cette cavité sur le logiciel Comsol Multiphysics doit permettre d'estimer les lignes de courants dans la cellule et l'influence de cet écoulement sur la distribution de température sur l'échangeur froid.
 
@@ -355,36 +355,36 @@ Les flux thermiques sont pour la plupart différents dans le cas d'un réfrigér
 \item Tout d'abord, le flux thermoacoustique 1D est calculé avec
 
 \begin{equation}
-Q_{TA} = \underbrace{ -\frac12~\RE\left[ \frac{ f_\kappa-f_\nu^* }{ (1+\mathrm{Pr})(1-f_\nu^*) } pu^* \right] }_{r(x)} + \underbrace{ \frac12 \frac{\rho_0 C_p}{\Phi S}~\IM\left[ \frac{f_\kappa + \mathrm{Pr} f_\nu^*}{(1-\mathrm{Pr}^2)|1-f_\nu|^2} \right] |u|^2 }_{q(x)}\partial_x \tau(r,x;t),
+Q_{TA} = \underbrace{ -\frac12~\RE\left[ \frac{ f_\kappa-f_\nu^* }{ (1+\mathrm{Pr})(1-f_\nu^*) } pu^* \right] }_{r(x)} + \underbrace{ \frac12 \frac{\rho_0 C_p}{\Phi S}~\IM\left[ \frac{f_\kappa + \mathrm{Pr} f_\nu^*}{(1-\mathrm{Pr}^2)|1-f_\nu|^2} \right] |u|^2 }_{q(x)}\partial_x \theta(r,x;t),
 \label{eq:FluxTA_Lotton_Regen}
 \end{equation}
-où $\tau(r,x;t) = T_0(r,x;t)-T_\infty$ est l'écart de la température locale à la température initiale. Pour la suite du document, cet écart de température sera simplement écrit $\tau$, sans la dépendance spatio-temporelle. 
+où $\theta(r,x;t) = T_0(r,x;t)-T_\infty$ est l'écart de la température locale à la température initiale. Pour la suite du document, cet écart de température sera simplement écrit $\theta$, sans la dépendance spatio-temporelle. 
 
 \item Ensuite, la conduction dans le régénérateur est prise en compte dans toutes les directions du régénérateur avec l'équation
 
 \begin{equation}
-	Q_{\sf cond} = -\begin{pmatrix}
+	Q_{\sf cond} = -\mathbf A \begin{pmatrix}
 	k_x\\
 %	k_\alpha\\
 	k_r
-	\end{pmatrix} \cdot \nabla \tau,
+	\end{pmatrix} \cdot \nabla \theta,
 	\label{eq:FluxCond_Lotton}
 \end{equation}
-avec les indices $x$ et $r$ dénotant respectivement les directions axiale et radiale.
+avec les indices $x$ et $r$ dénotant respectivement les directions axiale et radiale, et $\mathbf A$ une section équivalente dans chaque direction de l'espace et où circule le flux de conduction.
 
 %\begin{equation}
-%Q_{\sf cond}^{(x)} = -k_x\partial_x\tau~\mathrm{\mathbf e_x},
+%Q_{\sf cond}^{(x)} = -k_x\partial_x\theta~\mathrm{\mathbf e_x},
 %\label{eq:FluxCondx_Lotton}
 %\end{equation}
 %avec... 
 %
 %\begin{equation}
-%Q_{\sf cond}^{(r)} = -k_r\partial_r\tau~\mathrm{\mathbf e_r},
+%Q_{\sf cond}^{(r)} = -k_r\partial_r\theta~\mathrm{\mathbf e_r},
 %\label{eq:FluxCondr_Lotton}
 %\end{equation}
 %
 %\begin{equation}
-%Q_{\sf cond}^{(\alpha)} = -k_\alpha\partial_\alpha\tau~\mathrm{\mathbf e_\alpha},
+%Q_{\sf cond}^{(\alpha)} = -k_\alpha\partial_\alpha\theta~\mathrm{\mathbf e_\alpha},
 %\label{eq:FluxCondalpha_Lotton}
 %\end{equation}
 %\textcolor{red}{Rassembler $Q_{cond}$ en 1 seul terme} avec ...
@@ -392,15 +392,15 @@ avec les indices $x$ et $r$ dénotant respectivement les directions axiale et ra
 \item Les pertes visqueuses sont estimées avec l'équation
 
 \begin{equation}
-Q_{\sf visq} = \frac{1}{R_{\sf reg}^2} \int_0^{R_{\sf reg}} \frac{1}{\textcolor{red}{T_0}} \int_0^{\textcolor{red}{T_0}} \mu (\partial_r u)^2\ r \deriv r \deriv t,
+Q_{\sf visq} = \frac{1}{R_{\sf reg}^2} \int_{-R_{\sf reg}}^{R_{\sf reg}} \frac{1}{\tau_0} \int_0^{\tau_0} \mu (\partial_r u)^2\ r \deriv r \deriv t,
 \label{eq:FluxVisq_Lotton}
 \end{equation}
-résolue par une méthode numérique.
+dont les intégrales sur la section de rayon $R_{\sf reg}$ et la période $\tau_0$ sont résolues par une méthode numérique.
 
 \item Enfin, les pertes latérales sur la circonférence et aux extrémités du régénérateur sont prises en compte par
 
 \begin{equation}
-Q_{\sf lat} = \begin{pmatrix}h_x\\h_r\end{pmatrix} \tau,
+Q_{\sf lat} = \begin{pmatrix}h_x\\h_r\end{pmatrix} \theta,
 \label{eq:FluxLat_Lotton}
 \end{equation}
 où $h_r$ et $h_x$ sont respectivement le coefficient d'échanges avec les parois à $r = R_{\sf reg}$ et les coefficients d'échanges avec les extrémités à $x=0$ et $x=L_{\sf reg}$. Ils sont déterminés de façon empirique dans l'article.
@@ -423,7 +423,7 @@ où $h_r$ et $h_x$ sont respectivement le coefficient d'échanges avec les paroi
 Ces flux de chaleurs sont reportés dans l'équation modifiée du bilan de chaleur qui s'écrit
 
 \begin{equation}
-[\Phi\rho_0 C_p + (1-\Phi)\rho_s C_s]\partial_t \tau = - \nabla \cdot (Q_{TA} + Q_{\sf cond}) + Q_{\sf visq} + \frac{S_{\sf reg}}{L_{\sf reg}}Q_{\sf lat},
+[\Phi\rho_0 C_p + (1-\Phi)\rho_s C_s]\partial_t \theta = - \nabla \cdot (Q_{TA} + Q_{\sf cond}) + Q_{\sf visq} + \frac{S_{\sf reg}}{L_{\sf reg}}Q_{\sf lat},
 \label{eq:BilanChaleur_LottonPoignand}
 \end{equation}
 où le premier membre désigne la variation d'énergie interne suite à la variation de température. Dans le second membre, les flux sont exprimés pour chaque volume élémentaire. D'une part, les flux thermoacoustiques et de conduction sont \og de passage \fg{} au travers de ce volume, et c'est seulement dans le cas d'une divergence non nulle que la température y évolue. D'autre part, les effets visqueux et les pertes latérales se produisent dans chaque volume, il sont donc source (ou réservoir suivant le signe) de chaleur et doivent être pris en compte tels quels. Ceci dit, le régénérateur est supposé axisymétrique, ce qui permet de considérer les composantes azimuthales $\nabla_\alpha \cdot Q_{TA}$ et $\nabla_\alpha \cdot Q_{\sf cond}$ comme nulles.
@@ -433,9 +433,9 @@ Les flux chaleur apportés par l'échangeur froid $Q_f$ et extrait par l'échang
 
 \begin{subequations} \color{red}
 	\begin{align}
-		k_x \partial_x \tau - h_{x}|_{x=0}\tau &= Q_{TA}|_{x=0} - Q_{\sf vort}|_{x=0} + Q_f, \label{eq:CondFront_x_0Froid}\\
-		k_x \partial_x \tau + h_{x}|_{x=L_{\sf reg}}\tau &= Q_{TA}|_{x=L_{\sf reg}}  + Q_{\sf vort}|_{x=L_{\sf reg}} - Q_a, \text{et} \label{eq:CondFront_x_LregAmb}\\
-		k_r \partial_r \tau + h_{r}|_{r=r_a} &= 0. \label{eq:CondFront_r_ra}
+		k_x \partial_x \theta - h_{x}|_{x=0}\theta &= Q_{TA}|_{x=0} - Q_{\sf vort}|_{x=0} + Q_f, \label{eq:CondFront_x_0Froid}\\
+		k_x \partial_x \theta + h_{x}|_{x=L_{\sf reg}}\theta &= Q_{TA}|_{x=L_{\sf reg}}  + Q_{\sf vort}|_{x=L_{\sf reg}} - Q_a, \text{et} \label{eq:CondFront_x_LregAmb}\\
+		k_r \partial_r \theta + h_{r}|_{r=r_a} &= 0. \label{eq:CondFront_r_ra}
 	\end{align}
 	\label{eq:CondFront}%
 \end{subequations}
