--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -17,12 +17,14 @@
         $C_p$ & Capacité calorifique du gaz à pression constante \\
         $C_s$ & Capacité calorifique du solide poreux \\
         $C_v$ & Capacité calorifique du gaz à volume constant \\
+        $L_{\sf reg}$ & Longueur du régénérateur, $L_{\sf reg}=\qty{39}{\milli\meter}$ \\
         $\Nusselt$ & Nombre de Nusselt \\
         $P_0$ & Pression statique dans le réfrigérateur \\
         $p$ & Pression acoustique \\
         $\Peclet$ & Nombre de Péclet \\
         $\Prandtl$ & Nombre de Prandtl \\
         $\mathbf{e}_r$ & Coordonnée radiale dans le noyau \\
+        $R_{\sf reg}$ & Rayon du régénérateur, $R_{\sf reg}=\qty{74}{\milli\meter}$ \\
         $\Rayleigh$ & Nombre de Rayleigh \\
         $r_h$ & Rayon hydraulique des pores du régénérateur \\
         $T_0$ & Température moyenne locale du gaz dans le noyau \\
@@ -42,18 +44,19 @@
 %    	\hline
         \multicolumn{2}{c}{Lettres grecques \textcolor{red}{ordre alphabétique ?}}  \\\hline
         \textbf{Symbole} & \textbf{Définition} \\\hline\hline
-        $\theta_v$ & Rotation de l'axe de symétrie du réfrigérateur par rapport à l'axe horizontal\\
-        $\theta_h$ & Rotation autour de l'axe de symétrie du réfrigérateur \\
+        $\psi_v$ & Rotation de l'axe de symétrie du réfrigérateur par rapport à l'axe horizontal\\
+        $\psi_h$ & Rotation autour de l'axe de symétrie du réfrigérateur \\
         $\varphi_{2-1}$ & Déphasage entre les sources acoustiques, $\varphi_{1-2} = \varphi_2 - \varphi_1$\\
         $\Phi$ & Porosité du régénérateur \\
         $\rho_0$ & Masse volumique moyenne du gaz \\
         $\rho_{s}$ & Masse volumique du solide poreux\\
         $\delta_{\kappa,\nu}$ & Couche limites thermique/visqueuse \\
-        $\tau$ & Différence entre les températures locale dans le réfrigérateur et initiale, $\tau=T_0-T_\infty$\\
+        $\theta$ & Différence entre les températures locale dans le réfrigérateur et initiale, $\theta=T_0-T_\infty$\\
         $\mu$ & Viscosité dynamique \\
         $\nu$ & Viscosité cinématique \\
         $\kappa$ & Diffusivité thermique \\
-        $\xi_0$ & Déplacement particulaire dans le régénérateur\\
+        $\tau_0$ & Période du signal $\tau_0 = 1/f_0$ \\
+        $\xi_0$ & Déplacement particulaire dans le régénérateur \\
         $\xi_1$ & Déplacement du piston de la source acoustique principale \\
         $\xi_2$ & Déplacement du piston de la source acoustique secondaire \\\hline
     \end{tabular}
