Definition de \mylocaltoc
Avec les commandes existantes au début de chaque chapitre

--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -1,23 +1,15 @@
 \chapter{Protocole expérimental général}
-%\minitoc
-\vfill
-\hrule \vspace{.5cm}
-{\hypersetup{linkcolor = black}
-\localtableofcontents
-}%
-\vspace{.5cm} \hrule
-\vfill
-\clearpage
+\mylocaltoc
 
+
+
+\section{Présentation du réfrigérateur actuel}
 Après avoir brièvement rappelé les bases de fonctionnement des machines thermoacoustiques, il est important de décrire le réfrigérateur support de cette thèse. Le choix de la géométrie, les paramètres hydrauliques du régénérateur utilisé, et enfin la chaîne d'excitation/acquisition sont présentés.
 
 Les conditions expérimentales ainsi que les simulations théoriques réalisées sont présentées de manière globale pour pouvoir s'y référer dans les différents chapitres suivants.
 
-\section{Présentation du réfrigérateur actuel}
 \subsection{Géométrie}
-
 \subsubsection{Cavité thermoacoustique}
-
 La pompe à chaleur a été dimensionnée et fabriquée dans le cadre du projet ANR \textsc{Tacot} (Thermo-Acoustic Cooler for Onroad Transportation), qui porte sur l'utilisation d'une pompe à chaleur thermoacoustique pour la climatisation automobile \cite{ANR_thermo-acoustic_2019}. Ce projet apporte beaucoup de contraintes, dont la \textcolor{red}{principale} est la compacité. Contrairement aux autres systèmes thermoacoustiques existant \textcolor{red}{citer SETAC et Ben and Jerrys et le cryocooler de 11 m}, les dimensions doivent être réduites tout en conservant un pompage de chaleur efficace. Pour cela, une géométrie coaxiale pour la cavité thermoacoustique est préférée à celle toroÏdale utilisée par Swift en suivant les travaux de Poignand et al. \cite{poignand_thermoacoustic_2011,poignand_analysis_2013}. L'ajout d'une source acoustique secondaire dans la cavité thermoacoustique permet également de gagner en compacité, en remplaçant un résonateur plus long par la masse de son équipage mobile et la souplesse de sa suspension. De plus, la présence de cette source assure le déphasage optimal entre pression et vitesse acoustiques au sein du noyau thermoacoustique.% \cite{poignand_thermoacoustic_2011, poignand_analysis_2013}.
 
 
