--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -1,12 +1,5 @@
 \chapter{\'Etude experimentale}\label{chap:EtudeExpe}
-\vfill
-\hrule \vspace{.5cm}
-{\hypersetup{linkcolor = black}
-\localtableofcontents
-}%
-\vspace{.5cm} \hrule
-\vfill
-\clearpage
+\mylocaltoc
 
 \section{Convection naturelle}\label{chap:EtudeExpe_ConvNat}
 Lors des expériences réalisées lors de la caractérisation du réfrigérateur \textsc{Tacot}, il a été montré que le gradient axial de température dans le noyau thermoacoustique n'est pas linéaire, et que les températures ne sont pas homogènes le long de la direction transverse du noyau \textcolor{red}{figure ?}\cite{ramadan_design_2021}. Cet écart au comportement attendu, c'est-à-dire un gradient linéaire entre les côtés froid et ambiant du noyau thermoacoustique, ainsi qu'une température radiale uniforme sur la section du noyau thermoacoustique, implique la présence d'un écoulement moyen non nul et d'effets non-linéaires dans le réfrigérateur. Parmi les hypothèses formulées quant à la cause de ces disparités avec la théorie linéaire de Rott, plusieurs hypothèses peuvent être envisagées : vent acoustique, turbulence, formation de tourbillons, génération d'harmoniques supérieures, et convection naturelle. Parmi ces effets, peu d'études portent sur cette dernière, bien qu'il ait déjà été montré que le déclenchement de moteurs ou encore l'uniformité de température sur la section y étaient très sensibles \cite{ross_influence_2003,  hireche_numerical_2019, ramadan_experimental_2018,  zhang_novel_2011}.
