--- a/tex/EtudeTheoriqueSimus.tex
+++ b/tex/EtudeTheoriqueSimus.tex
@@ -1,12 +1,5 @@
 \chapter{\'Etudes théoriques et simulations}
-\vfill
-\hrule \vspace{.5cm}
-{\hypersetup{linkcolor = black}
-\localtableofcontents
-}%
-\vspace{.5cm} \hrule
-\vfill
-\clearpage
+\mylocaltoc
 
 \section{Détermination des coefficients empiriques du modèle transitoire}
 
