--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -1,15 +1,6 @@
 \chapter{Introduction}\label{chap:Intro}%\addcontentsline{toc}{chapter}{\nameref{chap:Intro}}
 %\markboth{INTRODUCTION}{}
-%\minitoc
-\vfill
-\hrule \vspace{.5cm}
-{\hypersetup{linkcolor = black}
-\localtableofcontents
-}%
-\vspace{.5cm} \hrule
-\vfill
-
-\clearpage
+\mylocaltoc
 
 \section{Revue bibliographique}
 
