--- a/tex/Conclusion.tex
+++ b/tex/Conclusion.tex
@@ -1,12 +1,5 @@
 \chapter{Conclusion}\label{chap:Conc}%\addcontentsline{toc}{chapter}{\nameref{chap:Conc}}
 %\markboth{CONCLUSION}{}
-\vfill
-\hrule \vspace{.5cm}
-{\hypersetup{linkcolor = black}
-\localtableofcontents
-}%
-\vspace{.5cm} \hrule
-\vfill
-\clearpage
+\mylocaltoc
 
 \section{Section}
