--- a/tex/Perspectives.tex
+++ b/tex/Perspectives.tex
@@ -1,13 +1,6 @@
 \chapter{Perspectives}\label{chap:Persp}%\addcontentsline{toc}{chapter}{\nameref{chap:Persp}}
 %\markboth{PERSPECTIVES}{}
-\vfill
-\hrule \vspace{.5cm}
-{\hypersetup{linkcolor = black}
-\localtableofcontents
-}%
-\vspace{.5cm} \hrule
-\vfill
-\clearpage
+\mylocaltoc
 
 %Il reste encore beaucoup à faire
 
